--- a/estilos.css
+++ b/estilos.css
@@ -204,18 +204,23 @@ a {
 	grid-template-columns: repeat(4, 1fr);
 }
 
-.main .grid-imagenes .imagen {
-	width: 48px;
+recetas_recomendadas .imagen {
+	width: 100%;
 	display: block;
 }
 
-.main .grid-imagenes .imagen img {
-	width: 48px;
+.main .recetas_recomendadas .imagen img {
+	width: 100%;
+}
+
+.main .recetas_recomendadas .contenido{
+    width: 90%;
+    margin: auto;
 }
 
 /* ---- ---- ---- Mediaqueries ---- ---- ---- */
 @media screen and (max-width: 1200px) {
-	.main .grid-imagenes {
+	.main .recetas_recomendadas {
 		grid-template-columns: repeat(3, 1fr);
 	}
 
@@ -229,7 +234,7 @@ a {
 }
 
 @media screen and (max-width: 992px) {
-	.main .grid-imagenes {
+	.main .recetas_recomendadas {
 		grid-template-columns: repeat(2, 1fr);
 	}
 }
@@ -258,7 +263,7 @@ a {
 }
 
 @media screen and (max-width: 576px) {
-	.main .grid-imagenes {
+	.main .recetas_recomendadas {
 		grid-template-columns: 1fr;
 	}
 }
