--- a/estilos.css
+++ b/estilos.css
@@ -197,11 +197,9 @@ a {
 .main .titulo {
 	margin-bottom: 20px;
 }
+.main .titulo h3 {
+	margin-bottom: 80px;
 
-.main .imagenes {
-	display: grid;
-	grid-gap: 40px 20px;
-	grid-template-columns: repeat(4, 1fr);
 }
 
 .recetas_recomendadas .imagen {
@@ -257,8 +255,6 @@ a {
     align-items: center;
     position: relative;
 }
-
-
 
 
 .recetas_recomendadas .contenido_principal .flecha-izquierda,
