--- a/estilos.css
+++ b/estilos.css
@@ -248,3 +248,105 @@ a {
 		grid-template-columns: 1fr;
 	}
 }
+
+/* A continuacion está el codigo que agregué para poder darle mejor visualizacion a la parte de contenido pero no funcionan,
+sin emabrgo, al agregarlos tampoco afecta */
+
+
+ /* No funciona*/
+ .main .recetas_recomendadas .imagen {
+	width: 100%;
+	display: block;
+}
+ /* No funciona*/
+.main .recetas_recomendadas .imagen img {
+	width: 100%;
+}
+ /* No funciona*/
+.main .recetas_recomendadas .contenido{
+    width: 90%;
+    margin: auto;
+}
+
+/* -- Contenido Titulo y Controles -- */
+ /* No funciona*/
+.main .contenido-titulo-controles {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+ /* No funciona*/
+.main .contenido-titulo-controles h3 {
+    color: #ff0000;
+    font-size: 30px;
+}
+ /* No funciona*/
+.main .contenido-titulo-controles .indicadores button{
+    background: #000;
+    height: 3px;
+    width: 10px;
+    cursor: pointer;
+    border: none;
+    margin-right: 2px;
+}
+ /* No funciona*/
+.main .contenido-titulo-controles .indicadores button:hover,
+.main .contenido-titulo-controles .indicadores button.activo {
+    background: red;
+}
+
+
+/* -- Contenido principal y Flechas -- */
+ /* No funciona*/
+.main .recetas_recomendadas {
+    margin-bottom: 70px;
+}
+ /* No funciona*/
+.main .recetas_recomendadas .contenido_principal{
+    display: flex;
+    align-items: center;
+    position: relative;
+}
+
+ /* No funciona*/
+.main .recetas_recomendadas .contenido_principal .flecha-izquierda,
+.main ..recetas_recomendadas .contenido_principal .flecha-derecha{
+    position: absolute;
+    border: none;
+    background: rgba(0, 0, 0, 0.3);
+    font-size: 40px;
+    height: 50%;
+    top: calc(50% - 25%);
+    line-height: 40px;
+    width: 50px; 
+    color: #fff;
+    cursor: pointer;
+    z-index: 500;
+    transition: .2s ease all;
+}
+ /* No funciona*/
+.main .recetas_recomendadas .contenido_principal .flecha-izquierda:hover,
+.main .recetas_recomendadas .contenido_principal .flecha-derecha:hover {
+    background: rgba(0, 0, 0, 0.9);
+}
+ /* No funciona*/
+.main .recetas_recomendadas .contenido_principal .flecha-izquierda{
+    left: 0;
+}
+ /* No funciona*/
+.main .recetas_recomendadas .contenido_principal .flecha-derecha{
+    right: 0;
+}
+
+/* -- Carrusel-- */
+ /* No funciona*/
+.main .recetas_recomendadas .contenido-carrusel{
+    width: 100%;
+    padding: 20px, 0;
+    overflow: hidden;
+    scroll-behavior: smooth;
+}
+ /* No funciona*/
+.main .recetas_recomendadas .contenido-carrusel .carrusel{
+    display: flex;
+}
